# consolized-game-boy

./: LICENSE  README.md
3D/: gameboy_consolizer_hdmi_mount.stl  wii_and_hdmi.stl  wii_jack_holder_top.stl
3d-models/: gb-board-mount.stl  gb-pico-mount-bottom.stl  gb-pico-mount-top.stl  gb-pwr-mount.stl  nes-dummy-controller-port.stl  nes-port-cover.stl
images/: Gameboy VGA - added original aspect ratio and scanline option - YouTube.url
src/gb_vga/: CMakeLists.txt  gb_vga.c  gb_vga.uf2  gb_vga_PCBv1.uf2  gb_vga_PCBv3.uf2  gb_vga__pcbv3__nes_classic_or_wii.uf2  gb_vga__pcbv3_nes_controller.uf2  gb_vga_v2.uf2  gb_vga_v3.uf2  gb_vga_v3_alt_timing.uf2  gb_vga_v3_alt_timing_test2.uf2  gb_vga_v3_test.uf2  osd.c  osd.h  scanvideo.h  scanvideo_base.h
src/nes-controller/: CMakeLists.txt  nes-controller.c
src/nes-controller-gb/: CMakeLists.txt  nes-controller-gb.c
